--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "start": "node lib/index.js",
     "build": "tsc --project ./",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsnd --respawn src/index.ts"
